bug: multiple wickets on single modal solved

--- a/src/components/ScoreBoard.css
+++ b/src/components/ScoreBoard.css
@@ -20,7 +20,7 @@
   color: red;
   font-size: 0.7rem;
   text-align: right;
-  padding-right: 0.4rem;
+  padding-right: 0.rem;
 }
 .hide {
   display: none;
