--- a/src/components/ScoreBoard.css
+++ b/src/components/ScoreBoard.css
@@ -19,7 +19,7 @@
   max-width: 9.3rem;
 }
 .run-out-player-error {
-  color: red;
+  color: #ff0000;
   font-size: 0.7rem;
   text-align: right;
   padding-right: 0rem;
@@ -27,13 +27,19 @@
 .hide {
   display: none;
 }
-.winning-hint{
-  background: yellow;
-  color: green;
+.badge {
+  background: #ffff0060;
+  color: #000000;
   text-align: center;
-  font-size: 0.8rem;
-  padding: 4px;
-  margin-bottom: 4px;
+  font-size: 0.75rem;
+  font-weight: 500;
+  padding: 8px;
+  margin-bottom: 8px;
+}
+.badge-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .score {
   display: flex;
