--- a/src/components/ScoreBoard.css
+++ b/src/components/ScoreBoard.css
@@ -123,7 +123,7 @@ table thead {
   padding: 0 !important;
 }
 .batter-name {
-  max-width: 6rem;
+  max-width: 6.5rem;
 }
 .extras-container {
   margin: 0.8rem 0;
@@ -157,4 +157,47 @@ table thead {
 }
 .text-center {
   text-align: center;
+}
+.score-board-container {
+  margin: 0.8rem 0;
+}
+.score-board-innings {
+  display: flex;
+  justify-content: space-between;
+  padding: 6px 4px;
+  color: #fff;
+  background: #737373;
+  font-size: 0.95rem;
+}
+.score-board-text {
+  color: #fff;
+  background: #404040;
+  padding: 8px;
+}
+.sb-batting {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.sb-batting table {
+  width: 100%;
+  border: none;
+  border-spacing: unset;
+}
+.sb-batting table thead {
+  font-size: 0.9rem;
+}
+.sb-batting table tbody {
+  font-size: 0.85rem;
+}
+.sb-batting table td {
+  padding: 8px 4px;
+}
+.score-board-extras {
+  margin: 0.8rem 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 6px 4px;
+  font-size: 0.85rem;
+  background: #3f51b517;
 }
