--- a/src/components/ScoreBoard.css
+++ b/src/components/ScoreBoard.css
@@ -1,6 +1,3 @@
-.container {
-  font-family: 'Roboto';
-}
 .inning {
   background: #3f51b5;
   color: white;
@@ -15,6 +12,7 @@
   padding: 4px;
   outline: none;
   border: 1px solid #fff;
+  border-radius: 4px;
 }
 #end-inning:active {
   color: #fff;
@@ -77,8 +75,50 @@ table thead {
   padding: 8px 4px;
 }
 .bowler {
+  display: flex;
+  align-items: center;
   background-color: #3f51b517;
   padding: 8px;
+}
+.react-autosuggest__container {
+  padding-left: 4px;
+  position: relative;
+}
+.react-autosuggest__input {
+  max-width: 6.5rem;
+}
+.react-autosuggest__input--focused {
+  /* outline: none; */
+}
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+.react-autosuggest__suggestions-container--open {
+  display: block;
+  position: absolute;
+  top: 1.3rem;
+  width: 6.85rem;
+  border: 1px solid #808080;
+  background-color: #fff;
+  font-weight: 400;
+  font-size: 0.8rem;
+  z-index: 2;
+}
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 4px;
+}
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
 }
 .bowler-runs {
   display: flex;
@@ -203,4 +243,23 @@ table thead {
   padding: 6px 4px;
   font-size: 0.85rem;
   background: #3f51b517;
+}
+.sb-bowling {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.sb-bowling table {
+  width: 100%;
+  border: none;
+  border-spacing: unset;
+}
+.sb-bowling table thead {
+  font-size: 0.9rem;
+}
+.sb-bowling table tbody {
+  font-size: 0.85rem;
+}
+.sb-bowling table td {
+  padding: 8px 4px;
 }
